Add lang switcher

--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -39,5 +39,7 @@
         {% include 'partials/languages.njk' %}
       </div>
     </section>
+
+    <a href="/en">EN</a>
   </div>
 {% endblock %}
