--- a/src/css/body.css
+++ b/src/css/body.css
@@ -8,7 +8,7 @@ body {
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 16px;
   color: var(--main-color);
-  margin: 0;
+  margin: 0 0 25px 0;
 }
 
 a,
