Update deps, fix build, add some text

--- a/src/templates/partials/experience/en/yamoney.njk
+++ b/src/templates/partials/experience/en/yamoney.njk
@@ -1,6 +1,8 @@
 <article>
+  <p>Support newbies, planning and decomposition of tasks, resource management, code review, logic review</p>
+  <p>Work with money transfer processes</p>
   <p>Development and support of the life cycle processes of Yandex.Money cards</p>
-  <p>Development and support of the portal front and backend (nodejs), working with internal tools</p>
+  <p>Development and support of the portal front and backend, working with internal tools, platform development</p>
   <p>Work on BEM methodology, React, Redux</p>
-  <p>Support for legacy code (XScript), refactoring, review</p>
+  <p>Work with legacy code (XScript), migration to nodejs</p>
 </article>
