--- a/src/templates/partials/projects.njk
+++ b/src/templates/partials/projects.njk
@@ -6,12 +6,12 @@
       <a class="projects__link" href="https://github.com/rvboris/koa-useragent" target="_blank">koa-useragent</a>
     </p>
 
-    <a href="https://badge.fury.io/js/koa-useragent">
-        <img src="https://badge.fury.io/js/koa-useragent.svg" alt="npm version">
+    <a href="https://www.npmjs.com/package/koa-useragent" target="_blank" rel="nofollow noopener">
+        <img src="https://img.shields.io/npm/v/koa-useragent.svg" alt="npm version">
     </a>
 
-    <a href="https://travis-ci.org/rvboris/koa-useragent" target="_blank">
-      <img src="https://secure.travis-ci.org/rvboris/koa-useragent.png" alt="build status">
+    <a href="https://circleci.com/gh/rvboris/koa-useragent" target="_blank" rel="nofollow noopener">
+      <img src="https://img.shields.io/circleci/project/github/rvboris/koa-useragent/master.svg" alt="build status">
     </a>
   </div>
 </section>
