--- a/src/templates/partials/experience/en/yamoney.njk
+++ b/src/templates/partials/experience/en/yamoney.njk
@@ -1,7 +1,7 @@
 <article>
-  <p>Support newbies, planning and decomposition of tasks, resource management, code review, logic review</p>
-  <p>Work with money transfer processes</p>
-  <p>Development and support of the life cycle processes of Yandex.Money cards</p>
+  <p>Support newbies, interviewing, planning and decomposition of tasks, resource management, code review, personal review</p>
+  <p>Development and support money transfer processes</p>
+  <p>Development and maintenance of the life cycle processes of Yandex.Money cards</p>
   <p>Development and support of the portal front and backend, working with internal tools, platform development</p>
   <p>Work on BEM methodology, React, Redux</p>
   <p>Work with legacy code (XScript), migration to nodejs</p>
