--- a/src/templates/partials/experience/yamoney.njk
+++ b/src/templates/partials/experience/yamoney.njk
@@ -1,8 +1,8 @@
 <article>
-  <p>Поддержка новичков, планирование и декомпозиция задач, распределение ресурсов, код ревью, logic ревью</p>
-  <p>Работа с процессамии денежных переводов</p>
+  <p>Поддержка новичков, проведение собеседований, планирование и декомпозиция задач, распределение ресурсов, код ревью, личное ревью</p>
+  <p>Разработка и развитие процессов денежных переводов</p>
   <p>Разработка и сопровождение процессов жизненного цикла карт Яндекс.Денег</p>
-  <p>Разработка и поддержка фронтенда и бекенда портала, работа с внутренними инструментами, развитие платформы</p>
+  <p>Разработка и поддержка фронтенда и бекенда портала, работа с внутренними инструментами, развитие фронтенд-платформы</p>
   <p>Работа по БЭМ методологии, React, Redux</p>
   <p>Работа с легаси кодом (XScript, XSLT, XML), переход к nodejs</p>
 </article>
