--- a/src/templates/partials/projects.njk
+++ b/src/templates/partials/projects.njk
@@ -14,4 +14,10 @@
       <img src="https://img.shields.io/circleci/project/github/rvboris/koa-useragent/master.svg" alt="build status">
     </a>
   </div>
+
+  <div>
+    <p>
+      <a class="projects__link" href="https://github.com/rvboris/streamix-bot" target="_blank">streamix-bot</a>
+    </p>
+  </div>
 </section>
