--- a/src/css/contacts.css
+++ b/src/css/contacts.css
@@ -1,7 +1,18 @@
 .contacts {
   &__photo {
     border-radius: 5px;
-    width: width('me.png');
-    height: height('me.png');
+    width: width('me.jpg');
+    height: height('me.jpg');
+  }
+
+  &__link {
+    opacity: 0.7;
+    margin: 6px 4px;
+    display: inline-block;
+
+    &:hover {
+      opacity: 1;
+      text-decoration: none;
+    }
   }
 }
